# es-torch

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  TODO  buf.gen.yaml  flake.nix  justfile  pyproject.toml  requirements.txt
es_torch/: adam.py  distrbuted.py  distrbuted_optim.py  distributed_optim.py  fitness_shaping.py  optim.py  sampling.py  schedules.py
es_torch/distributed/: distributed_pb2.py  distributed_pb2.pyi  distributed_pb2_grpc.py
es_torch/es/: es_pb2.py  es_pb2.pyi  es_pb2_grpc.py
examples/: grpc.py  grpc_example.py  minimal.py  policies.py  render.py  schedules.py  sweep_half_cheetah.py  sweep_humanoid.py  sweep_optimizers.py  train_dist.py  train_distributed.py  train_half_cheetah.py  train_half_cheetah_dist.py  train_half_cheetah_local.py  train_half_cheetah_minimal.py  train_humanoid.py  train_humanoid_dist.py  train_humanoid_dist2.py  utils.py
nix/: shell.nix
proto/distributed/: distributed.proto
proto/es/: es.proto
server/: go.mod  go.sum  main.go  metrics.go  server.go  server_done.go  server_heartbeat.go  server_send_state.go  server_subscribe.go  slices.go  tools.go  worker.go
server/cmd/server/: main.go
server/internal/epoch/: epoch.go
server/internal/server/: done.go  handler.go  heartbeat.go  send_state.go  subscribe.go
server/internal/worker/: pool.go  slice.go  worker.go
server/pkg/proto/distributed/: distributed.pb.go
server/pkg/proto/distributed/distributedconnect/: distributed.connect.go
server/pkg/proto/es/: es.pb.go
server/pkg/proto/es/esconnect/: es.connect.go
tests/: test_fitness_shaping.py
