[project]
name = "es-torch"
version = "0.1.0"
description = "Evolution Strategies in PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=1.9.0",
    "jaxtyping>=0.2.0",
]

[project.optional-dependencies]
examples = [
    "gymnasium[mujoco]>=0.26.0",
    "wandb>=0.12.0",
    "imageio[ffmpeg]>=2.9.0",
    "evochi>=0.1.0",
]
test = [
    "pytest>=7.0.0",
]
dev = [
    "pre-commit>=2.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
